metadata/force-app/main/default/objects/Account/fields/test_bsn_2__c.field-meta.xml
<CustomField>
    <fullName>test_bsn_2__c</fullName>
    <label>test bsn 2</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>