metadata/force-app/main/default/objects/Account/fields/test_extra__c.field-meta.xml
<CustomField>
    <fullName>test_extra__c</fullName>
    <label>test extra</label>
    <length>50</length>
    <type>Text</type>
</CustomField>