metadata/force-app/main/default/objects/Account/fields/test_field_10__c.field-meta.xml
<CustomField>
    <fullName>test_field_10_edited__c</fullName>
    <label>test field 10 edited</label>
    <length>50</length>
    <type>Text</type>
</CustomField>