metadata/force-app/main/default/objects/Account/fields/test_field_11__c.field-meta.xml
<CustomField>
    <fullName>test_field_11__c</fullName>
    <label>test field 11</label>
    <length>50</length>
    <type>Text</type>
</CustomField>