metadata/force-app/main/default/objects/Account/fields/test_field_12__c.field-meta.xml
<CustomField>
    <fullName>test_field_12__c</fullName>
    <label>test field 12</label>
    <length>25</length>
    <type>Text</type>
</CustomField>