metadata/force-app/main/default/objects/Account/fields/test_geolocation_bsn__c.field-meta.xml
<CustomField>
    <fullName>test_geolocation_bsn__c</fullName>
    <label>test geolocation bsn</label>
    <scale>1</scale>
    <type>Location</type>
</CustomField>