metadata/force-app/main/default/objects/Account/fields/TestPickList__c.field-meta.xml
<CustomField>
    <fullName>TestPickList__c</fullName>
    <label>TestPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Four</fullName>
                <color>#6666CC</color>
                <label>Four</label>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
                <color>#993399</color>
                <label>Three</label>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
                <color>#339999</color>
                <label>Two</label>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>