metadata/force-app/main/default/objects/Account/fields/TestPVSAnother__c.field-meta.xml
<CustomField>
    <fullName>TestPVSAnother__c</fullName>
    <label>TestPVSAnother</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TestPVS</valueSetName>
    </valueSet>
</CustomField>