metadata/force-app/main/default/objects/Account/validationRules/Name_Contains_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Contains_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS( Name , &quot;-1&quot;)</errorConditionFormula>
    <errorMessage>Name has -1</errorMessage>
</ValidationRule>