metadata/force-app/main/default/objects/Account/validationRules/Name_Greater_Than_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Greater_Than_3</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Name ) &gt; 3</errorConditionFormula>
    <errorMessage>len greater than 3</errorMessage>
</ValidationRule>